samples/_failures_safe/1761070394_a6ca87_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6db94bed.c: In function ‘main’:
./samples/SAFE/__tmp_6db94bed.c:190:13: error: expected expression at end of input
  190 |             if (
      |             ^~
./samples/SAFE/__tmp_6db94bed.c:190:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6db94bed.c:190:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6db94bed.c:190:13: error: expected declaration or statement at end of input
